--------------------------------------------------------------------------------


  Giada - Your Hardcore Loopmachine.

  Developed by Monocasual Laboratories

  www.giadamusic.com

  CHANGELOG
--------------------------------------------------------------------------------


0.16.0 beta-2 ---
- Removed all pthread.h leftovers 
- Fix Windows build
- Fix memory corruption on Keyboard refresh


0.16.0 beta-1 --- 2019 . 10 . 19
- Fix macOS build error + warnings


0.16.0 beta-0 --- 2019 . 10 . 19
- New internal engine<->UI architecture 
- New persistence layer
- New MIDI queue for incoming live MIDI messages
- Absolute #include paths in source code
- Removed Boost parameter from Sample Channel 


0.15.4 --- 2019 . 03 . 22
- New record-on-signal option for input and action recording
- Initial support for plug-ins with mono I/O buses
- PluginHost refactoring
- Smart pointers for Wave and Plugin objects
- Remove old and deprecated input delay compensation
- Optimized audio IO processing in Mixer callback
- Atomic I/O meters with improved accuracy
- Fix memory leak when replacing samples in a Sample Channel
- Fix plug-ins ordering method when re-opening Giada
- Fix silent Sample Channel when recording actions a second time
- Fix velocity always discarded when sending key-press to Sample Channel
- Fix inability to record actions with quantizer enabled


0.15.3 --- 2018 . 12 . 24
- Action recorder refactoring
- Optional midimap parameters (thank you @tomek-szczesny)
- Support for "inaudible" MIDI lightning events (thank you @tomek-szczesny)
- Build AppImage for Linux on Travis CI instance
- Huge optimization of the AppImage binary file
- Fix Action Editor repaint on min/max zoom levels
- "Resize recording" flag has been removed
- Change text labels for channel operations
- Smarter column assignment while loading a patch/project
- Fix wrong resizer bar width between Action Editor widgets when zooming
- Can't display custom channel name in Sample Channel (fixed)